Get candidates end to end
