# src/model/enums/fifa-federation.enum.ts
@@ -1,34 +1,0 @@
-/**
- * Enum representing the various FIFA federations.
- */
-export enum FifaFederation {
-    /**
-     * Asian Football Confederation.
-     */
-    AFC = "AFC",
-  
-    /**
-     * Confederation of African Football.
-     */
-    CAF = "CAF",
-  
-    /**
-     * Confederation of North, Central America and Caribbean Association Football.
-     */
-    CONCACAF = "CONCACAF",
-  
-    /**
-     * South American Football Confederation.
-     */
-    CONMEBOL = "CONMEBOL",
-  
-    /**
-     * Oceania Football Confederation.
-     */
-    OFC = "OFC",
-  
-    /**
-     * Union of European Football Associations.
-     */
-    UEFA = "UEFA",
-}
