# src/model/enums/index.ts
@@ -1,3 +1,2 @@
-export * from './fifa-federation.enum';
 export * from './world-region.enum';
 export * from './world-subregion.enum';
