# src/model/team-header.ts
@@ -1,5 +1,4 @@
-import { CountryCode, PositiveNumber, Url } from "./types/index";
-import { FifaFederation } from "./enums/index";
+import { CountryCode, Url } from "./types/index";
 
 /**
  * Represents the essential header information for a FIFA team.
@@ -20,35 +19,4 @@ export interface TeamHeader {
      * The URL to the team's icon or flag image in SVG format.
      */
     teamIconSvgUrl: Url;
-  
-    /**
-     * The FIFA ranking of the team, where a lower number indicates a higher rank.
-     */
-    fifaRank: PositiveNumber;
-  
-    /**
-     * The football federation the team belongs to (e.g., UEFA, CONMEBOL).
-     */
-    federation: FifaFederation;
 }
-
-/**
- * Represents a filter for filtering team headers based on various criteria.
- */
-export interface TeamHeaderFilter {
-  
-    /**
-     * The minimum FIFA rank to filter teams by.
-     */
-    minFifaRank?: PositiveNumber;
-  
-    /**
-     * The maximum FIFA rank to filter teams by.
-     */
-    maxFifaRank?: PositiveNumber;
-  
-    /**
-     * The FIFA federation to filter teams by.
-     */
-    federation?: FifaFederation;
-  }
